Fix for unwanted horizontal scrollbar.

--- a/drupal/sites/all/themes/blt/css/angular-portfolio-app/portfolio.css
+++ b/drupal/sites/all/themes/blt/css/angular-portfolio-app/portfolio.css
@@ -59,7 +59,7 @@ p {
 }
 
 .main-content-container {
-  overflow: hidden;
+  width: 99.95%;
 }
 
 /* Rows */
